--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,31 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
+*.pyo
+*.pyd
+*.so
 
-# Envs & venvs
+# Env & secrets
 .env
-.venv/
-venv/
-ENV/
+magadh
+magadh.pub
 
-# Telethon session
+# Telethon session files and state
+var/
 *.session
 *.session-journal
-var/
 
-# State & logs
-state.json
-*.log
+# SQLite DB
+*.db
 
 # OS
 .DS_Store
 Thumbs.db
 
-# IDE
-.vscode/
-.idea/
+# Build
+*.egg-info/
+.dist/
+.build/
 
 
 
