--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-telethon>=1.36.0
-python-dotenv>=1.0.1
-aiohttp>=3.9.5
-aiosqlite>=0.19.0
+telethon==1.36.0
+python-dotenv==1.0.1
+aiohttp==3.9.5
+aiosqlite==0.19.0
+prometheus-client==0.20.0
+pydantic==2.8.2
